--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="stylesheet" href="index.css">
+  <title>React Fashion Blog</title>
+</head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<body>
+  <header>
+    <h1 id="header">Sartre's List</h1>
+    <h2 id="subtitle">Better-Dressed People</h2>
+    <nav id="topnav" aria-label="Main Navigation" role="navigation">
+      <ul>
+        <li><a href="...">Women's</a></li>
+        <li><a href="...">Men's</a></li>
+        <li><a href="...">On the Street</a></li>
+        <li><a href="...">The Catwalk</a></li>
+        <li><a href="...">Ad Watch</a></li>
+        <li><a href="...">About</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main className="contentboxes">
+    <article>
+      <h2 id="date">11/12/20</h2>
+      <h3 id="headline">On the Street in Brooklyn</h3>
+      <img id="image" src="../src/images/blog-image-1.jpeg" alt="img" />
+      <p id="content">Cray ipsum, dolor sit amet consectetur adipisicing elit. Repellat quidem deserunt nemo dignissimos
+        fuga veniam inventore eligendi magna, aperiam odit mollita cupiditate eveniet velit officis magni aliquid,
+        laborum dolor? Quasi? Veniam amet rerum ducimus est ea at neque alias. Temporibus perspicatis at impedit
+        voluptas aut voluptas facere totam aliquid debitis rerum, ex consequuntur, nulla eius qua corrupti optio atque
+        ut. Repellendus meolestiae doloribus recusandae, itaque voluptatibus placeat repellat deserunt amet eaque
+        dignissimos, iste sapiente magnam dolormque. Fugit, cum, cupiditate aliquam, molltia quisquam sed nulla eveniet
+        doloribus neque optio odio qui! Id architecto impedit consequatur rem quaerat voluptatibus pariatur quas, quod
+        quisquam quo ab meolestiae.</p>
+      <a id="continue" href="...">Continues...</a>
+      <hr>
+    </article>
+    <article>
+      <h2 id="date">11/11/20</h2>
+      <h3 id="headline">Vintage in Vogue</h3>
+      <img id="image" src="../src/images/blog-image-2.jpeg" alt="img" />
+      <p id="content">Selfies sunt, dolor sit amet consectetur adipisicing elit. Repellat quidem deserunt nemo
+        dignissimos fuga veniam inventore eligendi magnam aperiam odit mollitia cupiditate eveniet velit officiis magni
+        aliquid, laborum dolor? Quasi? Veniam amet rerum ducimus est ea at neque alias. Temporibus perspicatis at
+        impedit voluptas aut voluptates facere totam aliquid debitis rerum, ex consequuntur, nulla eius quae corrupti
+        optio atque ut. Repellendus molestiae doloribus recusandae, itaque voluptatibus placeat repellat deserunt amet
+        eaque dignissimos, iste sapiente magnam doloremque. Fugit, cum, cupiditate aliquam, molltia quisquam sed nulla
+        eveniet doloribus neque optio odio qui! Id architecto impedit consequatur r</p>
+      <a id="continue" href="...">Continues...</a>
+      <hr>
+    </article>
+  </main>
+  <footer>
+    <nav id="topnav" aria-label="Main Navigation" role="navigation">
+      <ul>
+        <li><a href="...">Home</a></li>
+        <li><a href="...">Women's</a></li>
+        <li><a href="...">Men's</a></li>
+        <li><a href="...">On the Street</a></li>
+        <li><a href="...">The Catwalk</a></li>
+        <li><a href="...">Ad Watch</a></li>
+        <li><a href="...">About</a></li>
+        <li><a href="...">Tips</a></li>
+      </ul>
+    </nav>
+    <span id="copyright">&copy; 2022 Valet Industries, Inc.</span>
+  </footer>
+</body>
 </html>
